--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
     "@types/styled-components": "^5.1.25",
+    "axios": "^0.26.1",
     "react": "^18.0.0",
+    "react-css-modules": "^4.7.11",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
+    "typescript-plugin-css-modules": "^3.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
