--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "./",
   "private": true,
   "dependencies": {
+    "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
     "react": "^18.0.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.0.0",
+    "react-inlinesvg": "^3.0.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
@@ -46,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@svgr/core": "^6.2.1",
     "@types/react-dom": "^18.0.2"
   }
 }
