--- a/package.json
+++ b/package.json
@@ -1,54 +1,62 @@
 {
-  "name": "progetto-pcto",
-  "version": "0.1.0",
-  "homepage": "./",
-  "private": true,
-  "dependencies": {
-    "@svgr/webpack": "^6.2.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.26",
-    "@types/react": "^17.0.44",
-    "@types/styled-components": "^5.1.25",
-    "axios": "^0.26.1",
-    "react": "^18.0.0",
-    "react-css-modules": "^4.7.11",
-    "react-dom": "^18.0.0",
-    "react-inlinesvg": "^3.0.0",
-    "react-scripts": "5.0.0",
-    "styled-components": "^5.3.5",
-    "typescript": "^4.6.3",
-    "typescript-plugin-css-modules": "^3.4.0",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@svgr/core": "^6.2.1",
-    "@types/react-dom": "^18.0.2"
-  }
+    "name": "progetto-pcto",
+    "version": "0.1.0",
+    "homepage": "./",
+    "private": true,
+    "dependencies": {
+        "@svgr/webpack": "^6.2.1",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^12.1.4",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.4.1",
+        "@types/node": "^16.11.26",
+        "@types/react": "^17.0.44",
+        "@types/styled-components": "^5.1.25",
+        "axios": "^0.26.1",
+        "prettier": "^2.6.2",
+        "react": "^18.0.0",
+        "react-css-modules": "^4.7.11",
+        "react-dom": "^18.0.0",
+        "react-inlinesvg": "^3.0.0",
+        "react-scripts": "5.0.0",
+        "styled-components": "^5.3.5",
+        "typescript": "^4.6.3",
+        "typescript-plugin-css-modules": "^3.4.0",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "format": "npx prettier --write .",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "prepare": "husky install"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@svgr/core": "^6.2.1",
+        "@types/react-dom": "^18.0.2",
+        "husky": "^7.0.4",
+        "lint-staged": "^12.4.1"
+    },
+    "lint-staged": {
+        "**/*": "prettier --write --ignore-unknown"
+    }
 }
