--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/react": "^17.0.44",
         "@types/styled-components": "^5.1.25",
         "axios": "^0.26.1",
+        "detect-browser-language": "^0.0.2",
         "prettier": "^2.6.2",
         "react": "^18.0.0",
         "react-css-modules": "^4.7.11",
@@ -22,6 +23,7 @@
         "styled-components": "^5.3.5",
         "typescript": "^4.6.3",
         "typescript-plugin-css-modules": "^3.4.0",
+        "universal-cookie": "^4.0.4",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
