--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/react": "^17.0.44",
         "@types/styled-components": "^5.1.25",
         "axios": "^0.26.1",
+        "big-integer": "^1.6.51",
         "detect-browser-language": "^0.0.2",
         "prettier": "^2.6.2",
         "react": "^18.0.0",
