--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "progetto-pcto",
-    "version": "0.1.0",
+    "version": "1.0.0",
     "homepage": "./",
     "private": true,
     "dependencies": {
@@ -33,7 +33,8 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "build:dev": "dotenv -e .env.development react-scripts build"
     },
     "eslintConfig": {
         "extends": [
@@ -56,6 +57,7 @@
     "devDependencies": {
         "@svgr/core": "^6.2.1",
         "@types/react-dom": "^18.0.2",
+        "dotenv-cli": "^5.1.0",
         "husky": "^7.0.4",
         "lint-staged": "^12.4.1"
     },
